31.12.2017
      - As requested: Track monitor now works regardless of track mute. (Tim)
        Allows to listen to input while muting playback material.
        Note that turning a track off, or 'proxy muting' it will still
         mute the track.
29.12.2017
      - Revert some new undo stuff and replace with pending operations. (Tim)
        Undo was behaving oddly for things like mute, rec, monitor, off etc.
27.12.2017
      - Jack is now the default audio device selection. (Tim)
        If that fails, it tries rtAudio with Pulse, and if that fails,
         the dummy driver.
24.12.2017
      - Oops! Fix years-old bug preventing a just-moved part from sounding. (Tim)
        The MovePart undo/operations were not properly erasing/reinserting
         the part because they were passed null track and oldTrack.
        For ex. if a wave part was moved before another wave part, it
         looked OK on screen but it did not sound.
      - Reverted small piece of code that made song dirty too sensitive.
      - TODO: Revert a few places, causing some undo operations to be
         included in undo/redo history when they weren't meant to be.
      - Added sample-rate change according to song file when using RtAudio (rj)
        as backend.
      - Removed the RtAudioJack option, brings trouble and can't find any (rj)
        reasonable use for it.
23.12.2017
      - Some fixes to rtAudio support. (Tim)
        Fix compile error on unknown 'DummyAudio'.
        Automatically chooses nearest lower sample rate if requested
         rate is unsupported. Prevents freeze in MusE msg system.
        If driver cannot be started, it warns with a message box but MusE
         still runs so that user can change the driver.
        NOTE: If system is not set up properly, selecting Pulse backend
         while Jack is already running may cause MusE to freeze. Likewise,
         selecting Jack backend may cause Pulse to pause.
22.12.2017