@@ -3,6 +3,7 @@
         Allows to listen to input while muting playback material.
         Note that turning a track off, or 'proxy muting' it will still
          mute the track.
+      - Fix monitored midi output on wrong channel. Editing error from 17.12.2017
 29.12.2017
       - Revert some new undo stuff and replace with pending operations. (Tim)
         Undo was behaving oddly for things like mute, rec, monitor, off etc.
